added and editted new files

--- a/credit_score.ipynb
+++ b/credit_score.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "2d56e9b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install kaggle --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "id": "54ff9ea5",
    "metadata": {},
    "outputs": [],
@@ -14,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "7c0bca17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sample_submission.csv', 'test.csv', 'train.csv']"
+       "['train.csv', 'sample_submission.csv', 'test.csv']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "0c229b2b",
    "metadata": {},
    "outputs": [],
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "8b2d1bce",
    "metadata": {},
    "outputs": [
@@ -222,29 +242,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  checking_balance  months_loan_duration credit_history  \\\n",
-       "0           0             -43.0                     6       critical   \n",
+       "   Unnamed: 0  checking_balance  months_loan_duration credit_history   \n",
+       "0           0             -43.0                     6       critical  \\\n",
        "1           1              75.0                    48         repaid   \n",
        "2           3             -32.0                    42         repaid   \n",
        "3           5               NaN                    36         repaid   \n",
        "4           7             169.0                    36         repaid   \n",
        "\n",
-       "      purpose  amount  savings_balance employment_length  installment_rate  \\\n",
-       "0    radio/tv    1169              NaN          13 years                 4   \n",
+       "      purpose  amount  savings_balance employment_length  installment_rate   \n",
+       "0    radio/tv    1169              NaN          13 years                 4  \\\n",
        "1    radio/tv    5951             89.0           2 years                 2   \n",
        "2   furniture    7882              9.0           5 years                 2   \n",
        "3   education    9055              NaN           2 years                 2   \n",
        "4  car (used)    6948             57.0           2 years                 2   \n",
        "\n",
-       "  personal_status  ... installment_plan   housing existing_credits  default  \\\n",
-       "0          single  ...             none       own                2        0   \n",
+       "  personal_status  ... installment_plan   housing existing_credits  default   \n",
+       "0          single  ...             none       own                2        0  \\\n",
        "1             NaN  ...             none       own                1        1   \n",
        "2          single  ...             none  for free                1        0   \n",
        "3          single  ...             none  for free                1        0   \n",
        "4          single  ...             none      rent                1        0   \n",
        "\n",
-       "  dependents     telephone  foreign_worker                      job  gender  \\\n",
-       "0          1  2.349340e+09             yes         skilled employee    male   \n",
+       "  dependents     telephone  foreign_worker                      job  gender   \n",
+       "0          1  2.349340e+09             yes         skilled employee    male  \\\n",
        "1          1           NaN             yes         skilled employee  female   \n",
        "2          2           NaN             yes         skilled employee    male   \n",
        "3          2  2.345788e+09             yes       unskilled resident    male   \n",
@@ -260,7 +280,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "074b330e",
    "metadata": {},
    "outputs": [
@@ -287,7 +307,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "89a65367",
    "metadata": {},
    "outputs": [],
@@ -308,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "d8b4073c",
    "metadata": {},
    "outputs": [],
@@ -332,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "id": "50dc68a6",
    "metadata": {},
    "outputs": [],
@@ -343,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "4b5c23bb",
    "metadata": {},
    "outputs": [],
@@ -357,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "956171d2",
    "metadata": {},
    "outputs": [],
@@ -368,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "e49050e1",
    "metadata": {},
    "outputs": [],
@@ -383,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "1132bf15",
    "metadata": {},
    "outputs": [],
@@ -393,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "ab9ad7ea",
    "metadata": {},
    "outputs": [],
@@ -403,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "75f899c3",
    "metadata": {},
    "outputs": [],
@@ -413,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "7f60cf29",
    "metadata": {},
    "outputs": [],
@@ -429,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "2eeebe9a",
    "metadata": {},
    "outputs": [],
@@ -444,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "ad2ce4f7",
    "metadata": {},
    "outputs": [],
@@ -456,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "5ec966de",
    "metadata": {},
    "outputs": [
@@ -466,7 +486,7 @@
        "0.327683615819209"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "7f8e6402",
    "metadata": {},
    "outputs": [
@@ -488,13 +508,14 @@
        "0.24293785310734464"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "\n",
     "rf = RandomForestClassifier(100, min_samples_leaf=2)\n",
     "rf.fit(trn_xs, trn_y)\n",
@@ -503,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "id": "dfa3dd2f",
    "metadata": {},
    "outputs": [],
@@ -514,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "id": "3f8b0545",
    "metadata": {},
    "outputs": [],
@@ -524,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "id": "fbc9f2fe",
    "metadata": {},
    "outputs": [],
@@ -534,7 +555,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
+   "id": "16b68881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[cats] = test[cats].apply(lambda x: x.cat.codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "7dd8e600",
    "metadata": {},
    "outputs": [],
@@ -546,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "id": "c35ee31e",
    "metadata": {},
    "outputs": [],
@@ -556,17 +587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "id": "dd4ba4b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction = pd.DataFrame(test_id).join(pd.DataFrame(preds, columns=['default']))"
+    "prediction = pd.DataFrame(test_id).join(pd.DataFrame(preds, columns=['Predicted']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "id": "ec9bbc38",
    "metadata": {},
    "outputs": [],
@@ -576,8 +607,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "36b363ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/codespace/.python/current/bin/kaggle\", line 5, in <module>\n",
+      "    from kaggle.cli import main\n",
+      "  File \"/usr/local/python/3.10.4/lib/python3.10/site-packages/kaggle/__init__.py\", line 23, in <module>\n",
+      "    api.authenticate()\n",
+      "  File \"/usr/local/python/3.10.4/lib/python3.10/site-packages/kaggle/api/kaggle_api_extended.py\", line 164, in authenticate\n",
+      "    raise IOError('Could not find {}. Make sure it\\'s located in'\n",
+      "OSError: Could not find kaggle.json. Make sure it's located in /home/codespace/.kaggle. Or use the environment method.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle competitions list --sort-by 'earliestDeadline'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f28b9ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -599,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
